fix Printer signature