@@ -1,8 +1,10 @@
 package com.bakdata.conquery;
 
+import java.util.Collections;
 import java.util.Set;
 
 import com.bakdata.conquery.internationalization.ResultHeadersC10n;
+import com.bakdata.conquery.models.forms.util.Resolution;
 import com.bakdata.conquery.models.query.resultinfo.LocalizedDefaultResultInfo;
 import com.bakdata.conquery.models.query.resultinfo.ResultInfo;
 import com.bakdata.conquery.models.types.ResultType;
@@ -29,8 +31,16 @@ public class ConqueryConstants {
 
 	// Form related constants
 	public static final String SINGLE_RESULT_TABLE_NAME = "results";
-	public static final ResultInfo CONTEXT_INDEX_INFO =
-			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).index(), ResultType.Primitive.INTEGER, Set.of());
+	public static final ResultInfo CONTEXT_INDEX_INFO = LocalizedDefaultResultInfo.builder()
+																				  .type(ResultType.Primitive.INTEGER)
+																				  .semantics(Collections.emptySet())
+																				  .localizedDefaultLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class)
+																														 .index())
+																				  .localizedLabelProvider((l) -> l.getLocalized(ResultHeadersC10n.class)
+																												  .index())
+																				  .printer(Resolution::localizeValue)
+																				  .build();
+
 	public static final ResultInfo DATE_RANGE_INFO =
 			new LocalizedDefaultResultInfo((l) -> l.getLocalized(ResultHeadersC10n.class).dateRange(), ResultType.Primitive.DATE_RANGE, Set.of());
 	public static final ResultInfo RESOLUTION_INFO =
